# music-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PRODUCTION.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
deploy/k8s/: configmap.yaml  deployment.yaml  lavalink-configmap.yaml  lavalink-deployment.yaml  lavalink-service.yaml  namespace.yaml  pdb.yaml  postgres-backup-cronjob.yaml  postgres-backup-pvc.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  prometheus-rules.yaml  pvc.yaml  secret.example.yaml  service.yaml  spotify-tokener-deployment.yaml  spotify-tokener-service.yaml
deploy/lavalink/: application.yml
scripts/: integration_docker.sh  k8s_apply_prod.sh  k8s_reset_and_apply_prod.sh  load_test_local.py  load_test_local.sh  migrate_sqlite_to_postgres.py  postgres_backup.sh  postgres_restore.sh  prep_github_repo.sh  prod_deploy_local.sh  prod_preflight.sh  smoke_e2e_local.sh
src/botmusica/: __init__.py  __main__.py  (+2 more)
tests/: test_audio_options.py  test_cog_regressions.py  test_command_domains.py  test_dns_cache.py  test_feature_flags.py  test_nowplaying_controller.py  test_permissions.py  test_playback_scheduler.py  test_player_audio_source_queries.py  test_player_queue.py  test_player_state.py  test_playlist_jobs.py  test_reconnection_policy.py  test_repositories_split.py  test_repository_parity.py  test_search_pipeline.py  test_services_async.py  test_services_window.py  test_storage.py  test_voice_idle_refresh.py  test_web_panel_parsing.py
(+39 files in other folders)
